--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,7 +40,7 @@ jobs:
         context: .
         push: true
         file: scripts/docker/Dockerfile.http-server
-        tag: docker.pkg.github.com/morozovcookie/nomad-usage-example/http-server:${{ github.sha }}
+        tags: docker.pkg.github.com/morozovcookie/nomad-usage-example/http-server:${{ github.sha }}
     - name: Build gRPC Server
       id: build_grpc_server
       uses: docker/build-push-action@v2
@@ -48,4 +48,4 @@ jobs:
         context: .
         push: true
         file: scripts/docker/Dockerfile.grpc-server
-        tag: docker.pkg.github.com/morozovcookie/nomad-usage-example/grpc-server:${{ github.sha }}
+        tags: docker.pkg.github.com/morozovcookie/nomad-usage-example/grpc-server:${{ github.sha }}
